# parquet-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.d.ts  DEVELOP.md  LICENSE_MIT  README.md  index.html  index.ts  modules.html  package.json  pagesconfig.json  rollup.config.js  tmp.js  tsconfig.docs.json  tsconfig.json  typedoc.json
.cargo/: config.toml
.github/: dependabot.yml
assets/: highlight.css  navigation.js  search.js
bench/: bench.ts  make_data.py  pyproject.toml
bench/results/: bench.chart.html
browser_tests/: package.json  test.ts
classes/: bundler.WriterProperties.html  bundler.WriterPropertiesBuilder.html  bundler2.WriterProperties.html  bundler2.WriterPropertiesBuilder.html  bundler_arrow1.FFIRecordBatch.html  bundler_arrow1.FFITable.html  bundler_arrow1.IntoUnderlyingByteSource.html  bundler_arrow1.IntoUnderlyingSink.html  bundler_arrow1.IntoUnderlyingSource.html  bundler_arrow1.PipeOptions.html  bundler_arrow1.QueuingStrategy.html  bundler_arrow1.ReadableStreamGetReaderOptions.html  bundler_arrow1.RecordBatch.html  bundler_arrow1.Schema.html  bundler_arrow1.Table.html  bundler_arrow1.WriterProperties.html  bundler_arrow1.WriterPropertiesBuilder.html  bundler_arrow2.ArrowSchema.html  bundler_arrow2.ColumnChunkMetaData.html  bundler_arrow2.DataType.html  bundler_arrow2.FFIArrowArray.html  bundler_arrow2.FFIArrowChunk.html  bundler_arrow2.FFIArrowField.html  bundler_arrow2.FFIArrowRecordBatch.html  bundler_arrow2.FFIArrowSchema.html  bundler_arrow2.FFIArrowTable.html  bundler_arrow2.FFIRecordBatch.html  bundler_arrow2.FFITable.html  bundler_arrow2.FFIVector.html  bundler_arrow2.FileMetaData.html  bundler_arrow2.IntoUnderlyingByteSource.html  bundler_arrow2.IntoUnderlyingSink.html  bundler_arrow2.IntoUnderlyingSource.html  bundler_arrow2.PipeOptions.html  bundler_arrow2.QueuingStrategy.html  bundler_arrow2.ReadableStreamGetReaderOptions.html  bundler_arrow2.RecordBatch.html  bundler_arrow2.RowGroupMetaData.html  bundler_arrow2.Schema.html  bundler_arrow2.SchemaDescriptor.html  (+168 more)
data/: 1-partition-brotli.parquet  1-partition-gzip.parquet  1-partition-lz4.parquet  1-partition-none.parquet  1-partition-snappy.parquet  2-partition-lz4.parquet  2-partition-zstd.parquet  generate_data.py  not_work.parquet  works.parquet
docs/: custom_builds.md  example.md
enums/: bundler.Compression.html  bundler.Encoding.html  bundler.WriterVersion.html  bundler2.Compression.html  bundler2.Encoding.html  bundler2.WriterVersion.html  bundler_arrow1.Compression.html  bundler_arrow1.EnabledStatistics.html  bundler_arrow1.Encoding.html  bundler_arrow1.WriterVersion.html  bundler_arrow2.Compression.html  bundler_arrow2.Encoding.html  bundler_arrow2.WriterVersion.html  bundler_parquet_wasm.Compression.html  bundler_parquet_wasm.EnabledStatistics.html  bundler_parquet_wasm.Encoding.html  bundler_parquet_wasm.WriterVersion.html  esm_arrow1.Compression.html  esm_arrow1.EnabledStatistics.html  esm_arrow1.Encoding.html  esm_arrow1.WriterVersion.html  esm_arrow2.Compression.html  esm_arrow2.Encoding.html  esm_arrow2.WriterVersion.html  esm_parquet_wasm.Compression.html  esm_parquet_wasm.EnabledStatistics.html  esm_parquet_wasm.Encoding.html  esm_parquet_wasm.WriterVersion.html  node.Compression.html  node.Encoding.html  node.WriterVersion.html  node2.Compression.html  node2.Encoding.html  node2.WriterVersion.html  node_arrow1.Compression.html  node_arrow1.EnabledStatistics.html  node_arrow1.Encoding.html  node_arrow1.WriterVersion.html  node_arrow2.Compression.html  node_arrow2.Encoding.html  (+17 more)
functions/: bundler_arrow1._functionTable.html  bundler_arrow1.readParquet.html  bundler_arrow1.readParquetStream.html  bundler_arrow1.wasmMemory.html  bundler_arrow1.writeParquet.html  bundler_arrow2._functionTable.html  bundler_arrow2.readMetadata.html  bundler_arrow2.readMetadataAsync.html  bundler_arrow2.readParquet.html  bundler_arrow2.readParquetStream.html  bundler_arrow2.readRowGroup.html  bundler_arrow2.readRowGroupAsync.html  bundler_arrow2.wasmMemory.html  bundler_arrow2.writeParquet.html  bundler_parquet_wasm._functionTable.html  bundler_parquet_wasm.readParquet.html  bundler_parquet_wasm.readParquetStream.html  bundler_parquet_wasm.readSchema.html  bundler_parquet_wasm.transformParquetStream.html  bundler_parquet_wasm.wasmMemory.html  bundler_parquet_wasm.writeParquet.html  esm_arrow1._functionTable.html  esm_arrow1.default.html  esm_arrow1.initSync.html  esm_arrow1.readParquet.html  esm_arrow1.readParquetStream.html  esm_arrow1.wasmMemory.html  esm_arrow1.writeParquet.html  esm_arrow2._functionTable.html  esm_arrow2.default.html  esm_arrow2.initSync.html  esm_arrow2.readMetadata.html  esm_arrow2.readMetadataAsync.html  esm_arrow2.readParquet.html  esm_arrow2.readParquetStream.html  esm_arrow2.readRowGroup.html  esm_arrow2.readRowGroupAsync.html  esm_arrow2.wasmMemory.html  esm_arrow2.writeParquet.html  esm_parquet_wasm._functionTable.html  (+29 more)
interfaces/: esm_arrow1.InitOutput.html  esm_arrow2.InitOutput.html  esm_parquet_wasm.InitOutput.html  web.InitOutput.html  web2.InitOutput.html
modules/: bundler.html  bundler2.html  bundler_arrow1.html  bundler_arrow2.html  bundler_parquet_wasm.html  esm_arrow1.html  esm_arrow2.html  esm_parquet_wasm.html  node.html  node2.html  node_arrow1.html  node_arrow2.html  node_parquet_wasm.html  parquet_wasm.html  parquet_wasm2.html  web.html  web2.html
scripts/: build-node-tests.sh  build.sh  main.rs  report_build.sh
src/: arrow1.rs  arrow2.rs  async_testing.rs  enums.rs  error.rs  fetch.rs  lib.rs  main.rs  metadata.rs  read_options.rs  reader.rs  reader_async.rs  utils.rs  wasm.rs  write_options.rs  writer.rs  writer_async.rs  writer_properties.rs  writer_properties1.rs
src/arrow1/: Cargo.toml  error.rs  ffi.rs  metadata.rs  mod.rs  ranged_reader.rs  reader.rs  reader_async.rs  wasm.rs  writer.rs  writer_async.rs  writer_properties.rs
src/arrow1/src/: error.rs  lib.rs  reader.rs  wasm.rs  writer.rs  writer_properties.rs
src/arrow1/src/common/: mod.rs  writer_properties.rs
templates/: package.json
tests/: web.rs
www/: README.md  (+9 more)
(+105 files in other folders)
